--- a/sjwb/app/views/welcome/index.html.erb
+++ b/sjwb/app/views/welcome/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<head>
+<link rel="stylesheet" type="text/css" href="hackstylesheet.css"/>
+</head>
+
+<body>
+<img src="http://dy00k1db5oznd.cloudfront.net/wp-content/uploads/2014/12/AP405876550002.jpg" width="1300" height="500" id="home">
+    
+
+<ul>
+  <li><a href="home.html">HOME</a></li>
+  <li><a href="hack.html">POST</a></li>
+  <li><a href="see.html">EVENTS</a></li>
+  <li><a href="about.asp">PHOTOS/VIDEOS</a></li>
+</ul>
+    
+    <button type="button"><a href="hack.html">HAVE IDEAS?</a></button>
+    <button type="button"><a href="see.html">GET INVOLVED</a></button>
+    
+<p>Mission Statement: .........</p>
+</body>
