--- a/sjwb/app/views/events/list.html.erb
+++ b/sjwb/app/views/events/list.html.erb
@@ -11,14 +11,14 @@
 <body>
 
 <ul>
-  <li><a href="home.html">HOME</a></li>
+  <li><%= link_to "HOME", welcome_index_path %></li>
   <li><a href="hack.html">POST</a></li>
   <li><a href="see.html">EVENTS</a></li>
   <li><a href="about.asp">PHOTOS/VIDEOS</a></li>
 </ul>
 
 
-    
+
 <div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
