--- a/sjwb/app/views/events/create.html.erb
+++ b/sjwb/app/views/events/create.html.erb
@@ -23,8 +23,7 @@
   <li><a href="see.html">EVENTS</a></li>
   <li><a href="about.asp">PHOTOS/VIDEOS</a></li>
 </ul>
-        <H2>"BE THE CHANGE YOU WISH TO SEE IN THE WORLD." - MAHATMA GANDHI</H2>
-       <H1>POST </H1>
+       <H1 id="post">POST </H1>
        
        
        <div class = "container">
