--- a/sjwb/app/assets/stylesheets/application.css
+++ b/sjwb/app/assets/stylesheets/application.css
@@ -45,9 +45,14 @@ h1 {
     font-family: serif; 
 }
 h2 {
-    font-family: snell-roundhand; 
+    font-family: "Snell Roundhand"; 
 }
-    @import url("http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,400italic");
+
+post {
+  font-family: "Snell Roundhand"; 
+}
+
+@import url("http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,400italic");
     @import url("//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css");
     body {
 		padding: 60px 0px;
